--- a/cart.html
+++ b/cart.html
@@ -27,7 +27,7 @@
   <main class="cart-page">
     <h1>Coming Soon</h1>
     <p>This page is under construction.<br>Check back later!</p>
-    <a href="indeks.html" class="home-btn">← Back to Home</a>
+    <a href="index.html" class="home-btn">← Back to Home</a>
   </main>
 
 </body>
